--- a/calc.html
+++ b/calc.html
@@ -256,6 +256,11 @@ limitations under the License.-->
         </tr>
 
         <tr>
+        <td class="setting-label">Oil produced per unit of pollution:</td>
+        <td><input id="oilpol" class="oilpol" type="number" step="1" value="1" min="1" onchange="changeOilpol()"> /m /unit</td>
+        </tr>
+
+        <tr>
         <td class="setting-label">Default module:</td>
         <td><span id="default_module"></span></td>
         </tr>
